REFERENCE_MAIN_FILE = gnome-python-ref.xml
REFERENCE_DOC_NAME = gnome-python
DOC_MODULE = gnome-python

REFERENCE_XML_FILES =			\
	gnome-python-ref.xml		\
	gnomevfs-classes.xml		\
	gnomevfs-constants.xml		\
	gnomevfs-context.xml		\
	gnomevfs-directoryhandle.xml

include $(top_srcdir)/docs/pygtk-ref-docs.make

EXTRA_DIST = common.xsl devhelp.xsl html.xsl pdf-style.xsl pdf.xsl \
             pygtk-ref-docs.make ref-html-style.xsl tut-html-style.xsl
