xchat_gnome_DATA = 			\
	channel-list.glade		\
	color.png			\
	connect-dialog.glade		\
	dcc-accept.glade		\
	dcc-window.glade		\
	dcc.png				\
	effects.png			\
	global-message.png		\
	irc-network-editor.glade	\
	irc.png				\
	newdata.png			\
	nicksaid.png			\
	plugin-manager.png		\
	preferences-dialog.glade	\
	servers.png			\
	setup-dialog.glade		\
	soap.png			\
	stock_down.png			\
	stock_link.png			\
	stock_up.png			\
	toilet-paper.png		\
	topic-change.glade		\
	users.png			\
	xchat-gnome-small.png		\
	xchat-gnome-ui.xml		\
	xchat-gnome.glade		\
	xchat-gnome.png

xchat_gnomedir = $(datadir)/xchat

icondir = $(datadir)/pixmaps
icon_DATA = xchat-gnome.png

EXTRA_DIST = $(xchat_gnome_DATA) $(icon_DATA)
