bin_PROGRAMS = sheepsweeper

sheepsweeper_SOURCES = \
	Direction.h \
	Fadey.cpp \
	Fadey.h \
	IsoMapData.cpp \
	IsoMapData.h \
	IsoMapView.cpp \
	IsoMapView.h \
	IsoMapObjectFactory.cpp \
	IsoMapObjectFactory.h \
	IsoMapObject.cpp \
	IsoMapObject.h \
	IsoMapTile.cpp \
	IsoMapTile.h \
	List.cpp \
	List.h \
	MapData.cpp \
	MapData.h \
	MapLocation.cpp \
	MapLocation.h \
	MapObjectFactory.h \
	MapObject.cpp \
	MapObject.h \
	MapTile.cpp \
	MapTile.h \
	MapView.cpp \
	MapView.h \
	Sheep.cpp \
	Sheep.h \
	main.cpp

sheepsweeper_LDADD = \
	$(SDL_LIBS)

INCLUDES = \
	$(SDL_CFLAGS)
