if CLIENT_INCLUDED
noinst_LIBRARIES = libGLKit.a
endif

MAINTAINERCLEANFILES = \
	Makefile.in

libGLKit_a_SOURCES =			\
	OpenGLGState.cpp		\
	OpenGLLight.cpp			\
	OpenGLMaterial.cpp		\
	OpenGLTexture.cpp		\
	OpenGLDisplayList.cpp		\
	RenderNode.cpp

EXTRA_DIST = \
	GLCollect.cpp	\
	README
