EXTRA_DIST =	\
	3D.dsp		\
	ocadmin.dsp	\
	opencombat.dsw	\
	opencombat.dsp	\
	opencombatd.dsp	\
	common.dsp	\
	config.h	\
	date.dsp	\
	game.dsp	\
	geometry.dsp	\
	installer.dsp	\
	makehtml.dsp	\
	man2html.dsp	\
	mediafile.dsp	\
	net.dsp		\
	obstacle.dsp	\
	ogl.dsp		\
	platform.dsp	\
	regex.dsp	\
	scene.dsp	\
	zlib.dsp	\
	world.dsp

MAINTAINERCLEANFILES = \
	Makefile.in
